# vectorstream

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
doc/: index.html
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: index.html.svn-base
src/: Makefile.am  Makefile.in  add.cc  gslice.cc  multiply.cc  slice.cc  splice.cc  statistics.cc  vcat.cc  vec++.hh  vec.c  vec.h  vectorize.cc
